# easy_anon

./: LICENSE  NOTICE  README.md  pyproject.toml  requirements.in  requirements.txt
src/easy_anon/: __init__.py  anon.py  mask.py  utils.py
src/easy_anon/configs/: labels_ade20k.yaml  labels_cityscapes.yaml  labels_mapillary_vistas.yaml  models.yaml
