[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "easy-anon"
version = "0.1.0"
description = "A simple masking and anonymization tool based on Mask2Former"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "appdirs",
    "mask2former@git+https://github.com/v-pnk/Mask2Former.git@package",
    "numpy",
    "opencv-python",
    "PyYAML",
    "rich",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.7",
    "pre-commit",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = [
  "UP",   # pyupgrade
  "D",    # pydocstyle
  "W505", # long doc lines
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.hatch.build.targets.wheel]
packages = ["src/easy_anon"]

[tool.hatch.build]
include = ["src/easy_anon/configs/*.yaml"]